[gd_scene load_steps=4 format=3 uid="uid://bym3qys3xdgla"]

[ext_resource type="Script" path="res://src/projects/local_projects.gd" id="1_vvilm"]
[ext_resource type="PackedScene" uid="uid://ba02cqk3mop6o" path="res://src/general/selectables_list.tscn" id="2_ot0x7"]
[ext_resource type="PackedScene" uid="uid://btblf2mdnky7n" path="res://src/projects/choose_installation.tscn" id="3_m4nqt"]

[node name="LocalProjects" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
script = ExtResource("1_vvilm")

[node name="Content" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="ProjectPane" type="VBoxContainer" parent="Content"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="Filtering" type="HBoxContainer" parent="Content/ProjectPane"]
layout_mode = 2

[node name="Filter" type="LineEdit" parent="Content/ProjectPane/Filtering"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Filter Projects"
caret_blink = true
caret_blink_interval = 0.5

[node name="Label" type="Label" parent="Content/ProjectPane/Filtering"]
layout_mode = 2
text = "Show:"

[node name="VersionFilter" type="OptionButton" parent="Content/ProjectPane/Filtering"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "All"
popup/item_0/id = 0
popup/item_1/text = "Version set"
popup/item_1/id = 1
popup/item_2/text = "No version"
popup/item_2/id = 2

[node name="SortLabel" type="Label" parent="Content/ProjectPane/Filtering"]
layout_mode = 2
text = "Sort:"

[node name="Sort" type="OptionButton" parent="Content/ProjectPane/Filtering"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "Last Used"
popup/item_0/id = 0
popup/item_1/text = "Name"
popup/item_1/id = 1
popup/item_2/text = "Path"
popup/item_2/id = 2

[node name="AscDesc" type="OptionButton" parent="Content/ProjectPane/Filtering"]
layout_mode = 2
item_count = 2
selected = 1
popup/item_0/text = "Asc"
popup/item_0/id = 0
popup/item_1/text = "Desc"
popup/item_1/id = 1

[node name="Projects" parent="Content/ProjectPane" instance=ExtResource("2_ot0x7")]
layout_mode = 2

[node name="ButtonPane" type="VBoxContainer" parent="Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SetProjectsFolder" type="Button" parent="Content/ButtonPane"]
layout_mode = 2
text = "Set Projects Folder"

[node name="NewProject" type="Button" parent="Content/ButtonPane"]
layout_mode = 2
disabled = true
text = "New Project"

[node name="Import" type="Button" parent="Content/ButtonPane"]
layout_mode = 2
text = "Import"

[node name="Rescan" type="Button" parent="Content/ButtonPane"]
layout_mode = 2
text = "Rescan Projects Folder"

[node name="HSeparator" type="HSeparator" parent="Content/ButtonPane"]
layout_mode = 2

[node name="SetGodotVersion" type="Button" parent="Content/ButtonPane"]
layout_mode = 2
disabled = true
text = "Set Godot Version"

[node name="HSeparator2" type="HSeparator" parent="Content/ButtonPane"]
layout_mode = 2

[node name="Edit" type="Button" parent="Content/ButtonPane"]
layout_mode = 2
disabled = true
text = "Edit"

[node name="Run" type="Button" parent="Content/ButtonPane"]
layout_mode = 2
disabled = true
text = "Run"

[node name="Remove" type="Button" parent="Content/ButtonPane"]
layout_mode = 2
disabled = true
text = "Remove"

[node name="SetProjectsFolderDialog" type="FileDialog" parent="."]
initial_position = 2
title = "Open a Directory"
size = Vector2i(900, 500)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="RemoveConfirmationDialog" type="ConfirmationDialog" parent="."]
initial_position = 2
size = Vector2i(439, 109)
ok_button_text = "Yes"
dialog_text = "Are you sure you want to remove the selcted project(s)
from the list (no files will be deleted)?"

[node name="ImportDialog" type="FileDialog" parent="."]
initial_position = 2
title = "Open a File"
size = Vector2i(900, 500)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("project.godot")

[node name="ChooseInstallation" parent="." instance=ExtResource("3_m4nqt")]
visible = false

[connection signal="text_changed" from="Content/ProjectPane/Filtering/Filter" to="." method="_on_filter_text_changed"]
[connection signal="selection_changed" from="Content/ProjectPane/Projects" to="." method="_on_projects_selection_changed"]
[connection signal="pressed" from="Content/ButtonPane/SetProjectsFolder" to="." method="_on_set_projects_folder_pressed"]
[connection signal="pressed" from="Content/ButtonPane/Import" to="." method="_on_import_pressed"]
[connection signal="pressed" from="Content/ButtonPane/Rescan" to="." method="perform_scan"]
[connection signal="pressed" from="Content/ButtonPane/SetGodotVersion" to="." method="_on_set_godot_version_pressed"]
[connection signal="pressed" from="Content/ButtonPane/Edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="Content/ButtonPane/Run" to="." method="_on_run_pressed"]
[connection signal="pressed" from="Content/ButtonPane/Remove" to="." method="_on_remove_pressed"]
[connection signal="dir_selected" from="SetProjectsFolderDialog" to="." method="_on_scan_folder_dialog_dir_selected"]
[connection signal="confirmed" from="RemoveConfirmationDialog" to="." method="_on_confirm_remove_pressed"]
[connection signal="file_selected" from="ImportDialog" to="." method="_on_import_dialog_file_selected"]
[connection signal="version_set" from="ChooseInstallation" to="." method="_on_choose_installation_version_set"]
